--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/pack/files/start/nerdtree"]
 	path = .vim/pack/files/start/nerdtree
 	url = https://github.com/preservim/nerdtree
+[submodule ".vim/pack/files/start/ctrlp.vim"]
+	path = .vim/pack/files/start/ctrlp.vim
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
