--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule ".vim/pack/style/start/limelight.vim"]
 	path = .vim/pack/style/start/limelight.vim
 	url = https://github.com/junegunn/limelight.vim
+[submodule ".vim/pack/features/start/vimtex"]
+	path = .vim/pack/features/start/vimtex
+	url = https://github.com/lervag/vimtex.git
+[submodule ".vim/pack/features/start/coc.nvim"]
+	path = .vim/pack/features/start/coc.nvim
+	url = https://github.com/neoclide/coc.nvim.git
